# E-Moti

./: .gitignore  05_Shinsekai_VPet融合开发方案.md  06_产品技术Spec_AI桌面伴侣.md  07_美术动画与资源包工作流.md  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_demo.py  run_ui.py
data/: companion_save.json
docs/: ai_character_generation_sop.md  character_pack_authoring_runbook.md  character_pack_distribution_policy.md  current_development_route_2026-06-11.md  current_development_route_2026-06-12.md  current_development_route_2026-06-17.md  default_character_decision_2026-06.md  default_character_decision_2026-07.md  demo_delivery.md  demo_operator_quickstart.md  e_moti_course_submission_2026-06-23.md  e_moti_course_submission_2026-06-25.md  final_acceptance_delivery_2026-06-20.md  final_release_gate_2026-06.md  final_release_gate_2026-07.md  live2d_asset_pipeline.md  live2d_renderer_spike.md  llm_expression_operations.md  open_source_release_checklist.md  pixel_pet_manual_qa_and_ugc_branching.md  pixel_pet_sequence_sop.md  portrait_video_generation_sop.md  spirit_sequence_frame_sop.md  windows_installer_packaging_plan.md
packaging/: e-moti-installer.iss  launch_control_panel.py  launch_pet_mode.py
private_submission_config.example/: README.md
tests/: conftest.py  test_actions.py  test_ai_context_builder.py  test_ai_expressor.py  test_app.py  test_art_tools.py  test_capability_panels.py  test_capability_runtime.py  test_capability_settings.py  test_character_draft_creator_tool.py  test_character_draft_validator_tool.py  test_character_generation_workflow.py  (+107 more)
(+222 files in other folders)
