[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-companion-demo"
version = "0.1.0"
description = "Offline core loop prototype for the AI desktop companion demo."
requires-python = ">=3.11"
dependencies = ["PySide6==6.11.0", "Pillow>=12.1.0", "ddgs>=9.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
