[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-companion-demo"
version = "0.1.0"
description = "Windows-first desktop AI companion runtime with local pet state and optional AI expression capabilities."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["PySide6==6.11.0", "Pillow>=12.1.0", "ddgs>=9.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
