[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-companion-demo"
version = "0.1.0"
description = "Windows desktop AI companion pet demo with local growth state and optional expression providers."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["PySide6==6.11.0", "Pillow>=12.1.0", "ddgs>=9.0.0", "edge-tts>=7.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
